--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Bebas+Neue&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Bebas+Neue&family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
 
 * {
     font-family: "roboto", sans-serif;
@@ -13,17 +14,28 @@
 }
 
 .mainTitle {
-  font-family: "Bebas Neue", sans-serif;
+
+  font-family: "Passion One", sans-serif;
   font-size: 3.5rem;
   color: #000000;
   text-align: center;
 }
 
 .subTitle {
-  font-family: "roboto", sans-serif;
+  font-family: "Passion One", sans-serif;
   font-size: 2rem;
   color: #000000;
 }
+
+  .projet {
+    font-family: "Passion One", sans-serif;
+  font-size: 2rem;
+  color: #000000;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    text-align: center;
+  }
+
 
 .simple-loader {
     width: 20px;
