--- a/src/App.css
+++ b/src/App.css
@@ -1,40 +1,53 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'); */
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
-/* @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap'); */
-@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Bebas+Neue&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Bebas+Neue&family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+/* Web3 Modern Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap');
 
 * {
-    font-family: "roboto", sans-serif;
+    font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
 }
 
-.mainTitle {
+/* Web3 Dark Theme Scrollbar */
+::-webkit-scrollbar {
+  width: 10px;
+}
 
-  font-family: "Passion One", sans-serif;
+::-webkit-scrollbar-track {
+  background: #0a0b0d;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #6366f1;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #818cf8;
+}
+
+.mainTitle {
+  font-family: "Orbitron", sans-serif;
   font-size: 3.5rem;
-  color: #000000;
+  font-weight: 800;
+  letter-spacing: 0.05em;
   text-align: center;
 }
 
 .subTitle {
-  font-family: "Passion One", sans-serif;
+  font-family: "Space Grotesk", sans-serif;
   font-size: 2rem;
-  color: #000000;
+  font-weight: 600;
 }
 
-  .projet {
-    font-family: "Passion One", sans-serif;
+.projet {
+  font-family: "Space Grotesk", sans-serif;
   font-size: 2rem;
-  color: #000000;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    text-align: center;
-  }
+  font-weight: 600;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  text-align: center;
+}
 
 
 .simple-loader {
